fixing spacing on current menu item

--- a/assets/_styles/components/horizontal-nav.scss
+++ b/assets/_styles/components/horizontal-nav.scss
@@ -23,7 +23,10 @@
     @extend %navigation__link;
     color: $black;
     border-bottom: 3px solid $primaryColour;
-    margin-right: 0.75em;
+    margin:  0 0.75em;
     padding: 0.75em 0.2em;
+    &:first-child {
+      margin-left: 0;
+    }
   }
 }
